--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,8 @@
+
+
+/* Copyright 2023
+ I, Inc., hereby disclaims all copyright interest in the program “RoWeb” written by me. */
+
 .navbar {
   margin: auto;
   width: 100%;
