--- a/assets/css/mainl.css
+++ b/assets/css/mainl.css
@@ -1,3 +1,6 @@
+/* Copyright 2023
+ I, Inc., hereby disclaims all copyright interest in the program “RoWeb” written by me. */
+
 body {
   background: #F0F0F0;
   font-family: "Comic Sans MS";
